<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/dashboardFragment"
        android:icon="@drawable/ic_dashboard_24"
        android:title="@string/tab_dashboard"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/learningListFragment"
        android:icon="@drawable/ic_list_24"
        android:title="@string/tab_library"
        app:showAsAction="ifRoom" />
</menu>
