...
    <string name="detail_source_format">Source: %1$s</string>
    <string name="notes_hint">Notes and reflections</string>
    <string name="edit_item">Edit</string>
    <string name="delete_item">Delete</string>
    <string name="delete_title">Remove this item?</string>
    <string name="delete_message">This will delete the course from your list.</string>
    <string name="create_title">Add learning item</string>
    <string name="edit_title">Edit learning item</string>
    <string name="field_title">Title</string>
    <string name="field_source">Source</string>
    <string name="field_tags">Tags (comma separated)</string>
    <string name="tag_limit_error">You can add up to %1$d tags.</string>
    <string name="status_label">Status</string>
...
